--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["B. Gian James <gian@convolutedsystems.com>"]
 name = "goldparser-rs"
-version = "0.1.1"
+version = "0.1.2"
 
 description = "Rust engine for the GOLD Builder/Parser Ecosystem"
 repository = "https://github.com/droidengineer/goldparser-rs.git"
@@ -12,6 +12,17 @@ keywords = ["parser", "goldparser", "dfa", "lalr", "grammar"]
 categories = ["parsing", "template-engine", "development-tools"]
 license = "MIT"
 
+edition = "2021"
+
+exclude = [".*"]
+
+[[bin]]
+name = "egtutil"
+
+[lib]
+name = "goldparser"
+path = "src/lib.rs"
+doc = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
