--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ doc = true
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+# build tasks: GOLDprog <egt> <skeleton>
 # features: cli debug
 
 
