--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,10 @@ path = "src/lib.rs"
 doc = true
 edition = "2021"
 
+#[build]
+# For faster linking. Maybe not best for release version.
+#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 # build tasks: GOLDprog <egt> <skeleton>
 # features: cli debug
@@ -36,6 +40,8 @@ enum_primitive = "0.1"
 num-traits = "0.2"
 regex = "1.7"
 thiserror = "1.0"
+log = "0.4"
+env_logger = "0.10"
 #rmp = "0.8"
 
 
